--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/romi1.png") top center;
+  background: url("https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg") top center;
   background-size: cover;
 }
 
