--- a/static/css/home.css
+++ b/static/css/home.css
@@ -7,7 +7,7 @@
 }
 
 html {
-    background: url("https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg") no-repeat center center fixed;
+    background: url(https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
